expected/main/core/structs/nested-struct-align-64.err
ERROR: "actual/main/core/structs/nested-struct-align-64.lc", line 6
struct U [ a :: S | b :: T ]
                    ^
Cannot access field b (offset 10 is not divisible by alignment 8)

ERROR: "actual/main/core/structs/nested-struct-align-64.lc", line 7
struct V1 [ p :: Array 12 S ]
                 ^
Cannot determine byte level representation for values of type Array 12 S

ERROR: Aborting after 2 previously reported errors

